--- a/ApplicationGUI/ApplicationGUI.vcxproj
+++ b/ApplicationGUI/ApplicationGUI.vcxproj
@@ -23,7 +23,7 @@
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{69b81e25-f857-41c9-82d2-dd7475064442}</ProjectGuid>
     <RootNamespace>ApplicationGUI</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.22000.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -92,12 +92,16 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>APPGUI_BUILD_DLL;UNICODE;_DEBUG</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(ProjectDir)src;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>User32.lib</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy /y $(TargetPath) $(SolutionDir)\bin\$(Configuration)-$(Platform)\VisualDiscordBotCreator\</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -107,6 +111,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>APPGUI_BUILD_DLL;UNICODE;</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(ProjectDir)src;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -115,6 +120,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>User32.lib</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy /y $(TargetPath) $(SolutionDir)\bin\$(Configuration)-$(Platform)\VisualDiscordBotCreator\</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -122,12 +130,16 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>APPGUI_BUILD_DLL;UNICODE;_DEBUG</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(ProjectDir)src;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>User32.lib</AdditionalDependencies>
+      <AdditionalDependencies>User32.lib;Gdi32.lib;d2d1.lib;Dwmapi.lib</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy /y $(TargetPath) $(SolutionDir)\bin\$(Configuration)-$(Platform)\VisualDiscordBotCreator\</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -137,6 +149,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>APPGUI_BUILD_DLL;UNICODE;</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(ProjectDir)src;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -145,22 +158,30 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>User32.lib</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy /y $(TargetPath) $(SolutionDir)\bin\$(Configuration)-$(Platform)\VisualDiscordBotCreator\</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="VisualDiscordBotCreator.licenseheader" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\AppGUI\Graphics\Graphics.h" />
+    <ClInclude Include="src\AppGUI\Windows\BaseWindow.h" />
     <ClInclude Include="src\AppGUI\Application.h" />
     <ClInclude Include="src\AppGUI\Controls\Control.h" />
     <ClInclude Include="src\ApplicationGUI.h" />
     <ClInclude Include="src\AppGUI\Core.h" />
     <ClInclude Include="src\AppGUI\EntryPoint.h" />
-    <ClInclude Include="src\AppGUI\pch.h" />
+    <ClInclude Include="src\pch.h" />
+    <ClInclude Include="src\AppGUI\Windows\Window2D.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\AppGUI\Graphics\Graphics.cpp" />
+    <ClCompile Include="src\AppGUI\Windows\BaseWindow.cpp" />
     <ClCompile Include="src\AppGUI\Application.cpp" />
     <ClCompile Include="src\AppGUI\Controls\Control.cpp" />
-    <ClCompile Include="src\AppGUI\pch.cpp">
+    <ClCompile Include="src\pch.cpp">
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">pch.h</PrecompiledHeaderFile>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">pch.h</PrecompiledHeaderFile>
@@ -170,6 +191,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">pch.h</PrecompiledHeaderFile>
     </ClCompile>
+    <ClCompile Include="src\AppGUI\Windows\Window2D.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
