--- a/ApplicationGUI/ApplicationGUI.vcxproj
+++ b/ApplicationGUI/ApplicationGUI.vcxproj
@@ -97,7 +97,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>User32.lib</AdditionalDependencies>
+      <AdditionalDependencies>User32.lib;Gdi32.lib;d2d1.lib;Dwmapi.lib;	Dwrite.lib</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y $(TargetPath) $(SolutionDir)\bin\$(Configuration)-$(Platform)\VisualDiscordBotCreator\</Command>
@@ -118,7 +118,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>User32.lib</AdditionalDependencies>
+      <AdditionalDependencies>User32.lib;Gdi32.lib;d2d1.lib;Dwmapi.lib;	Dwrite.lib</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y $(TargetPath) $(SolutionDir)\bin\$(Configuration)-$(Platform)\VisualDiscordBotCreator\</Command>
@@ -135,7 +135,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>User32.lib;Gdi32.lib;d2d1.lib;Dwmapi.lib</AdditionalDependencies>
+      <AdditionalDependencies>User32.lib;Gdi32.lib;d2d1.lib;Dwmapi.lib;	Dwrite.lib</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y $(TargetPath) $(SolutionDir)\bin\$(Configuration)-$(Platform)\VisualDiscordBotCreator\</Command>
@@ -156,7 +156,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>User32.lib</AdditionalDependencies>
+      <AdditionalDependencies>User32.lib;Gdi32.lib;d2d1.lib;Dwmapi.lib;	Dwrite.lib</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y $(TargetPath) $(SolutionDir)\bin\$(Configuration)-$(Platform)\VisualDiscordBotCreator\</Command>
