--- a/ApplicationGUI/ApplicationGUI.vcxproj
+++ b/ApplicationGUI/ApplicationGUI.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -166,6 +166,7 @@
     <None Include="VisualDiscordBotCreator.licenseheader" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\AppGUI\Windows\DockPanel.h" />
     <ClInclude Include="src\AppGUI\Graphics\Graphics.h" />
     <ClInclude Include="src\AppGUI\Windows\BaseWindow.h" />
     <ClInclude Include="src\AppGUI\Application.h" />
@@ -175,8 +176,11 @@
     <ClInclude Include="src\AppGUI\EntryPoint.h" />
     <ClInclude Include="src\pch.h" />
     <ClInclude Include="src\AppGUI\Windows\Window2D.h" />
+    <ClInclude Include="src\AppGUI\Graphics\Vector2D.h" />
+    <ClInclude Include="src\AppGUI\Graphics\Transform.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\AppGUI\Windows\DockPanel.cpp" />
     <ClCompile Include="src\AppGUI\Graphics\Graphics.cpp" />
     <ClCompile Include="src\AppGUI\Windows\BaseWindow.cpp" />
     <ClCompile Include="src\AppGUI\Application.cpp" />
@@ -192,6 +196,8 @@
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="src\AppGUI\Windows\Window2D.cpp" />
+    <ClCompile Include="src\AppGUI\Graphics\Vector2D.cpp" />
+    <ClCompile Include="src\AppGUI\Graphics\Transform.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
